<resources>
    <string name="app_name">Checkbox ScrowView</string>
    <string name="music">音樂</string>
    <string name="sing">唱歌</string>
    <string name="dance">跳舞</string>
    <string name="travel">旅行</string>
    <string name="readding">閱讀</string>
    <string name="writing">寫作</string>
    <string name="climbing">爬山</string>
    <string name="swim">游泳</string>
    <string name="exerice">運動</string>
    <string name="fitness">健身</string>
    <string name="photo">拍照</string>
    <string name="eating">美食</string>
    <string name="panting">繪畫</string>
    <string name="your_hobby">你的興趣</string>
    <string name="btn_ok">確定</string>

</resources>
